BOY: fix bugs found by FindBugs