@@ -123,7 +123,7 @@ public class IntegerProperty extends AbstractWidgetProperty {
 		try {
 			return Integer.parseInt(propElement.getValue());
 		} catch (NumberFormatException e) {
-			return new Integer((int) Double.parseDouble(propElement.getValue()));	
+			return Integer.valueOf((int) Double.parseDouble(propElement.getValue()));	
 		}
 	}
 
